# Engine-Prototype

./: .gitignore  .gitmodules  Build.py  CMakeLists.txt  README.md
Sample Project/assets/: CMakeLists.txt
Sample Project/assets/Announcer/: AnnouncerComponent.cpp  AnnouncerComponent.h
Sample Project/assets/Boss/: CMakeLists.txt
Sample Project/assets/Boss/Flower/: ASM_Flower.dtasm  Flower.dttex  SM_Flower.dtsprmat
Sample Project/assets/Game Manager/: CMakeLists.txt  GameManagerComponent.cpp  GameManagerComponent.h
Sample Project/assets/Hourglass/: ASM_Hourglass.dtasm  A_Hourglass.dtanim  CMakeLists.txt
Sample Project/assets/Iris Transition/: ASM_IrisTransition.dtasm  CMakeLists.txt  IrisTransitionComponent.h
Sample Project/assets/Knockout/: CMakeLists.txt  KnockoutComponent.h  SG_Knockout.dtssgen
Sample Project/assets/Main Menu/: CMakeLists.txt  MainMenuControllerComponent.h
Sample Project/assets/Player/: CMakeLists.txt  PlayerComponent.cpp
Sample Project/assets/Player Health/: PC Computer - Cuphead Dont Deal With the Devil - Health.dttex  PlayerHealthComponent.cpp  SM_PlayerHealth.dtsprmat
Sample Project/assets/Player Shot/: ASM_PlayerShot.dtasm  A_PlayerShot.dtanim  CMakeLists.txt  PlayerShot.dttex  PlayerShotComponent.h
Sample Project/assets/Ready Go Message/: ASM_ReadyGoMessage.dtasm  A_ReadyGoMessage.dtanim  CMakeLists.txt  Ready Go Message.dttex  SG_ReadyGoMessage.dtssgen  SM_ReadyGoMessage.dtsprmat
Sample Project/assets/Utils/: BoxColliderParams.h
Sample Project/assets/You Died/: CMakeLists.txt  PC Computer - Cuphead Dont Deal With the Devil - YOU DIED.dttex  Press R To restart.dttex  SM_YouDied.dtsprmat  YouDiedMessageComponent.h
Sample Project/assets/animation/: A_AcornSpin.danim  A_Boomerang.danim  A_Burst.danim  A_Chomper.danim  A_ChomperDeath.danim  A_Chomper_Seed_Fall.danim  A_Chomper_Seed_Plant.danim  A_CupheadAimDiagonalUp.danim  A_CupheadAimDown.danim  A_CupheadAimStraight.danim  A_CupheadAimUp.danim  A_CupheadDeath.danim  A_CupheadDuckBegin.danim  A_CupheadDuckLoop.danim  A_CupheadHitBegin.danim  A_CupheadIntroBegin.danim  A_CupheadRun.danim  A_CupheadRunShootingDiagonalUp.danim  A_CupheadShootDown.danim  A_CupheadShootDuck.danim  A_CupheadShootStraight.danim  A_CupheadShootUp.danim  A_CupheadShotJumping.danim  A_FDFAAttacking.danim  A_FDFABeginAttack.danim  A_FDFAPreparing.danim  A_FGAttacking.danim  A_FGEndAttack.danim  A_FloatingPlatform.danim  A_FlowerCreateReset.danim  A_FlowerCreating.danim  A_FlowerDeath.danim  A_FlowerIntro1.danim  A_FlowerIntroEnd.danim  A_FlowerThrowBegin.danim  A_FlowerThrowing.danim  A_IrisTransition.danim  A_PlayerShot.danim  A_SeedMissiles.danim  A_UpBeginAttack.danim  (+4 more)
Sample Project/assets/animation state machine/: ASM_ChomperSeed.dasm  ASM_FloatingPlatform.dasm  ASM_Hourglass.dasm  ASM_PlayerShot.dasm  ASM_Propelor.dasm  ASM_ReadyGoMessage.dasm  ASM_Venus.dasm  ASM_Vines.dasm  ASM_YouDied.dasm
Sample Project/assets/bank/: Master.strings.bank
Sample Project/assets/material/: A_Controls.dsprmat  A_Logo.dsprmat  A_StagePlatform.dsprmat  SG_VenusVines.dsprmat  SM_Boomerang.dsprmat  SM_FloatingPlatformB.dsprmat  SM_FloatingPlatformC.dsprmat  SM_Flower.dsprmat  SM_Hourglass.dsprmat  SM_IrisTransition.dsprmat  SM_PlayerHealth.dsprmat  SM_PlayerShot.dsprmat  SM_PressRToRestart.dsprmat  SM_Propelor.dsprmat  SM_ReadyGoMessage.dsprmat  SM_SeedMissiles.dsprmat  SM_StagePlants.dsprmat
Sample Project/assets/scene/: Game.dscene  Manager.dscene  scenes.dscenes
Sample Project/assets/sprite sheet gen/: SG_Burst.dssgen  SG_ChomperSeed.dssgen  SG_Cuphead.dssgen  SG_FloatingPlatformB.dssgen  SG_Flower.dssgen  SG_Hourglass.dssgen  SG_Venus.dssgen  SG_VenusSeed.dssgen  spriteSheetGens.dssgens
src/: CMakeLists.txt  EntryPoint.cpp
src/Config/: CMakeLists.txt  GlobalConfigurationSerializer.cpp  GlobalConfigurationSerializer.h
src/Core/: CMakeLists.txt  DommusCore.h
src/Core/src/: CMakeLists.txt  Graphics.h  TemplateUtils.h
src/Core/src/Animation/: Animation.cpp  Animation.h  (+12 more)
src/Draw Functions/: CMakeLists.txt  Draw.cpp  Draw.h
src/Editor Animation/: CMakeLists.txt  EditorAnimation.cpp  EditorAnimation.h  EditorAnimationStateMachine.cpp  EditorAnimationStateMachine.h
src/Editor Asset Management/: AnimationManager.cpp  AnimationManager.h  AnimationStateMachineManager.cpp  AnimationStateMachineManager.h  CMakeLists.txt  EditorAssetManager.cpp  EditorAssetManager.h  MaterialManager.cpp  MaterialManager.h  PhysicsMaterialManager.cpp  PhysicsMaterialManager.h  SceneManager.cpp  SceneManager.h  SpriteSheetGenManager.cpp  SpriteSheetGenManager.h  TextureManager.cpp  TextureManager.h  TextureMetadataManager.cpp  TextureMetadataManager.h
src/File Browser/: CMakeLists.txt  FileBrowser.h  UnixFileBrowser.cpp  WindowsFileBrowser.cpp
src/Log/: CMakeLists.txt  Log.cpp  Log.h
src/Panel/: AnimationPanel.cpp  AnimationPanel.cpp~  AnimationPanel.h  AnimationStateMachinePanel.cpp  AnimationStateMachinePanel.h  CMakeLists.txt  ConfigurationPanel.cpp  ConfigurationPanel.h  ConsolePanel.cpp  ConsolePanel.h  EditorGameViewPanel.cpp  EditorGameViewPanel.h  EditorGameViewPanels.cpp  EditorGameViewPanels.h  GameStatePanel.cpp  GameStatePanel.h  GameViewPanel.cpp  GameViewPanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.cpp  Panel.h  Panels.cpp  Panels.h  PhysicsMaterialPanel.cpp  PhysicsMaterialPanel.h  ResourcesPanel.cpp  ResourcesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SpriteMaterialPanel.cpp  SpriteMaterialPanel.h  SpriteSheetGenPanel.cpp  SpriteSheetGenPanel.h  TexturePanel.cpp  TexturePanel.h  UtilityPanel.cpp  UtilityPanel.h
src/Path/: CMakeLists.txt  Path.cpp  Path.h
src/Payload/: AnimationPayload.h  AnimationStateMachinePayload.h  CMakeLists.txt  PhysicsMaterialPayload.h
src/Program Context/: CMakeLists.txt  ProgramContext.h
src/Serialization/: CMakeLists.txt  SceneSerialization.cpp  SceneSerialization.h
src/Sprite Sheet Gen/: CMakeLists.txt  SpriteSheetGen.cpp  SpriteSheetGen.h
src/Type Names/: CMakeLists.txt  TypeNames.cpp  TypeNames.h
src/Window/: CMakeLists.txt  Window.cpp  Window.h
(+1347 files in other folders)
