add_subdirectory(Player)
add_subdirectory(Player\ Shot)
add_subdirectory(Stage/Platform)
add_subdirectory(Boss)
add_subdirectory(Utils)
add_subdirectory(Knockout)
add_subdirectory(Player\ Health)
add_subdirectory(You\ Died)
add_subdirectory(Game\ Manager)
add_subdirectory(Hourglass)
add_subdirectory(Main\ Menu)
add_subdirectory(Iris\ Transition)
add_subdirectory(Announcer)
add_subdirectory(Music\ Manager)
add_subdirectory(Ready\ Go\ Message)
